<resources>
    <string name="app_name">JoinOng</string>
    <!-- View activity_login-->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forget_password"><u>¿Olvidó su contraseña?</u></string>
    <string name="sign_in">Acceder</string>
    <string name="register"><u>Registrarse</u></string>
    <string name="empty_username">Correo obligatorio</string>
    <string name="invalid_username">Formato incorrecto</string>
    <string name="invalid_password">La contraseña tiene que tener un tamaño minimo de 6</string>
    <string name="login_failed">"Error en el acceso"</string>
    <string name="error_dontexist_user">"Los datos introducidos son incorrectos"</string>
    <string name="forgetpassword_ok">"Se ha enviado un correo con un enlace para resetear su contraseña"</string>
    <!-- end View activity_login-->

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="repassword">Repassword</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>


    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_dispatcher">Registro</string>

    <string name="text_btn_next">SIGUIENTE</string>
    <string name="text_btn_accept">ACEPTAR</string>

    <!-- View activity_dispatcher-->
    <string name="text_btn_org">ORGANIZACIÓN</string>
    <string name="text_btn_vol">VOLUNTARIO</string>
    <!-- end View activity_dispatcher-->

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="custom_greet">Hola %1$s !</string>

    <!-- View activity_organization_reg-->
    <string name="title_activity_organization_reg">Registro Organización</string>
    <string name="header_activity_organization_reg">Datos Organización</string>
    <string name="text_name_organization">Nombre organización</string>
    <string name="text_description_organization">Descripción organización</string>
    <string name="text_email_organization">Email organización</string>
    <string name="text_phone_organization">Teléfono organización</string>

    <string name="empty_name">Campo nombre obligatorio</string>
    <string name="empty_surname">Campo apellidos obligatorio</string>
    <string name="empty_nick">Campo nick obligatorio</string>
    <string name="empty_description">Campo descripción obligatorio</string>
    <string name="empty_email">Campo email obligatorio</string>
    <string name="empty_password">Campo contraseña obligatorio</string>
    <string name="empty_password_conf">Campo confirmar contraseña  obligatorio</string>
    <string name="invalid_password_password_conf">Campo contraseña y confirmación contraseña debe ser iguales</string>
    <string name="empty_phone">Campo teléfono obligatorio</string>
    <string name="invalid_phone">Campo teléfono debe tener un tamaño de 9 dígitos</string>
    <!-- end View activity_organization_reg-->

    <!-- View activity_volunteer_reg-->
    <string name="title_activity_administrator_reg">Datos Administrador</string>
    <string name="text_name_administrator">Nombre administrador</string>
    <string name="text_surname_administrator">Apellidos administrador</string>
    <string name="text_nick_administrator">Nick administrador</string>
    <string name="text_email_administrator">Email administrador</string>
    <string name="text_password_administrator">Contraseña</string>
    <string name="text_re_password_administrator">Confirmación Contraseña</string>
    <string name="text_phone_administrator">Teléfono administrador</string>

    <string name="title_activity_volunteer_reg">Registro Voluntario</string>
    <string name="text_name_volunteer">Nombre voluntario</string>
    <string name="text_surname_volunteer">Apellidos voluntario</string>
    <string name="text_nick_volunteer">Nick voluntario</string>
    <string name="text_email_volunteer">Email voluntario</string>
    <string name="text_password_volunteer">Contraseña</string>
    <string name="text_re_password_volunteer">Confirmación Contraseña</string>
    <string name="text_phone_volunteer">Teléfono voluntario</string>
    <string name="text_iden_organization">Identificador organización</string>
    <!-- end View activity_volunteer_reg-->

</resources>
